--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "jest": "^23.4.1",
+    "supertest": "^3.1.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
@@ -39,5 +40,8 @@
   "bugs": {
     "url": "https://github.com/alefesouza/getninjas-challenge/issues"
   },
-  "homepage": "https://github.com/alefesouza/getninjas-challenge#readme"
+  "homepage": "https://github.com/alefesouza/getninjas-challenge#readme",
+  "jest": {
+    "testURL": "http://localhost:3000/"
+  }
 }
