chore: add build script to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "gulp dist",
     "test": "jest"
   },
   "dependencies": {
